updated the structure of page

--- a/index.html
+++ b/index.html
@@ -7,22 +7,17 @@
     <link rel="stylesheet" href="style.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.7.2/css/all.min.css" integrity="sha512-Evv84Mr4kqVGRNSgIGL/F/aIDqQb7xQ2vcrdIwxfjThSH8CSR7PBEakCr51Ck+w+/U6swU2Im1vVX0SVk9ABhg==" crossorigin="anonymous" referrerpolicy="no-referrer" />
 <link href="https://fonts.googleapis.com/css2?family=Anton&family=Nunito:ital,wght@0,200..1000;1,200..1000&display=swap" rel="stylesheet">
 </head>
 <body>
 
-    <div class="main_div">
-            <h1>To-Do List</h1>
-            <hr class="main_hr">
-            <button class="add_item">Add Task</button>
-            <hr class="secondary_hr">
-
-            <div  class="list_container">
-                <p class="plus">1</p>
-                <input type="text" placeholder="Add_Task" class="add_task" required size="30" >
-                <input type="time" class="time">
-                <button class="delete_task">Delete Task</button>
-            </div>
+    <div id="main_div">
+        <h3>To-Do <span>List</span></h3>
+         <div id="input_field">
+            <input type="text" name="input" id="input" placeholder="Add Your Task">
+            <button id="add">ADD</button>
+         </div>
     </div>
     
 
